changes in index.html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>S K - Blog</title>
 </head>
 <body>
-    <h1 style="text-align: center;">testing</h1>
+    <h1 style="text-align: center;">testing Index.html</h1>
 </body>
 </html>
